[package]
name = "iris-mpc-upgrade"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ark-bls12-381 = "0.5.0"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-serialize = "0.5.0"
axum.workspace = true
iris-mpc-common = { path = "../iris-mpc-common" }
iris-mpc-store = { path = "../iris-mpc-store" }
clap = { workspace = true, features = ["env"] }
eyre.workspace = true
bytemuck.workspace = true
serde.workspace = true
serde-big-array = "0.5"
tracing.workspace = true
itertools.workspace = true
rand.workspace = true
rand_chacha = "0.3"
tokio.workspace = true
tracing-subscriber.workspace = true

tonic = { version = "0.12.3", features = [
    "tls",
    "tls-native-roots",
    "transport",
] }
prost = "0.13.3"
sha2.workspace = true
thiserror.workspace = true
hkdf = "0.12.4"
rustls = { version = "0.23.16", features = ["ring"] }
blake3 = "1.8.2"
rayon.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-secretsmanager.workspace = true
base64.workspace = true
reqwest.workspace = true

[dev-dependencies]
float_eq = "1"
criterion = "0.5"


[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "seed-v2-dbs"
path = "src/bin/seed_v2_dbs.rs"

[[bin]]
name = "reshare-server"
path = "src/bin/reshare-server.rs"

[[bin]]
name = "reshare-client"
path = "src/bin/reshare-client.rs"

[[bin]]
name = "rerandomize-db"
path = "src/bin/rerandomize_db.rs"

[[bench]]
name = "rerandomize"
harness = false
