[package]
name = "iris-mpc-upgrade"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ark-bls12-381 = "0.5.0"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-serialize = "0.5.0"
axum.workspace = true
iris-mpc-common = { path = "../iris-mpc-common" }
iris-mpc-store = { path = "../iris-mpc-store" }
clap = { workspace = true, features = ["env"] }
eyre.workspace = true
bytemuck.workspace = true
serde.workspace = true
serde-big-array = "0.5"
tracing.workspace = true
itertools.workspace = true
rand.workspace = true
rand_chacha = "0.3"
tokio.workspace = true
tracing-subscriber.workspace = true

tonic = { version = "0.12.3", features = [
    "tls",
    "tls-native-roots",
    "transport",
] }
prost = "0.13.3"
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion = "0.5"
rayon = "1.10.0"


[build-dependencies]
tonic-build = "0.12.3"
