[package]
name = "iris-mpc-utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes-prng = { git = "https://github.com/tf-encrypted/aes-prng.git", branch = "dragos/display" }
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-rds.workspace = true
aws-sdk-sns.workspace = true
aws-sdk-sqs.workspace = true
aws-sdk-s3.workspace = true
bincode.workspace = true
eyre.workspace = true
itertools.workspace = true
iris-mpc = { path = "../iris-mpc" }
iris-mpc-common = { path = "../iris-mpc-common" }
iris-mpc-cpu = { path = "../iris-mpc-cpu" }
iris-mpc-store = { path = "../iris-mpc-store" }
rand.workspace = true
serde = { version = "1.0.214", features = ["derive"] }
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-test = "0.2.5"
uuid.workspace = true

[[bin]]
name = "service-client"
path = "bin/service_client/main.rs"

[[bin]]
name = "write-node-config-toml"
path = "bin/write_node_config_toml.rs"
