[package]
name = "iris-mpc-utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-rds.workspace = true
aws-sdk-sns.workspace = true
aws-sdk-sqs.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-secretsmanager.workspace = true
bincode.workspace = true
clap.workspace = true
dotenvy.workspace = true
eyre.workspace = true
iris-mpc-common = { path = "../iris-mpc-common" }
iris-mpc-cpu = { path = "../iris-mpc-cpu" }
iris-mpc-store = { path = "../iris-mpc-store" }
itertools.workspace = true
rand.workspace = true
serde = { version = "1.0.214", features = ["derive"] }
serde_json.workspace = true
sqlx.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
