[package]
name = "iris-mpc-utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-rds.workspace = true
aws-sdk-sns.workspace = true
aws-sdk-sqs.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-secretsmanager.workspace = true
base64.workspace = true
bincode.workspace = true
clap.workspace = true
dotenvy.workspace = true
eyre.workspace = true
futures.workspace = true
iris-mpc = { path = "../iris-mpc" }
iris-mpc-common = { path = "../iris-mpc-common" }
iris-mpc-cpu = { path = "../iris-mpc-cpu" }
iris-mpc-store = { path = "../iris-mpc-store" }
itertools.workspace = true
rand.workspace = true
rayon.workspace = true
serde = { version = "1.0.214", features = ["derive"] }
serde_json.workspace = true
sodiumoxide.workspace = true
sqlx.workspace = true
thiserror.workspace = true
toml.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
dirs = "6.0.0"
