[package]
name = "iris-mpc"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aws-config.workspace = true
aws-sdk-sns.workspace = true
aws-sdk-sqs.workspace = true
aws-sdk-s3.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
static_assertions.workspace = true
futures.workspace = true
serde_json.workspace = true
telemetry-batteries.workspace = true
eyre.workspace = true
clap.workspace = true
bytemuck.workspace = true
dotenvy.workspace = true
rand.workspace = true
base64.workspace = true
uuid.workspace = true
reqwest.workspace = true
mountpoint-s3-client.workspace = true
sodiumoxide = "0.2.7"
iris-mpc-gpu = { path = "../iris-mpc-gpu" }
iris-mpc-common = { path = "../iris-mpc-common" }
iris-mpc-store = { path = "../iris-mpc-store" }
sha2 = "0.10.8"
metrics = "0.22.1"
metrics-exporter-statsd = "0.7"
serde = { version = "1.0.214", features = ["derive"] }
bincode = "1.3.3"

[dev-dependencies]
criterion = "0.5"
ndarray = "0.16.0"

[features]
default = []
