[package]
name = "iris-mpc"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aws-config.workspace = true
aws-sdk-sns.workspace = true
aws-sdk-sqs.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-secretsmanager.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
static_assertions.workspace = true
futures.workspace = true
serde_json.workspace = true
telemetry-batteries.workspace = true
eyre.workspace = true
clap.workspace = true
bytemuck.workspace = true
dotenvy.workspace = true
rand.workspace = true
base64.workspace = true
uuid.workspace = true
reqwest.workspace = true
sodiumoxide.workspace = true
iris-mpc-gpu = { path = "../iris-mpc-gpu" }
iris-mpc-common = { path = "../iris-mpc-common" }
iris-mpc-store = { path = "../iris-mpc-store" }
itertools.workspace = true
metrics.workspace = true
metrics-exporter-statsd.workspace = true
serde = { version = "1.0.214", features = ["derive"] }
iris-mpc-cpu.workspace = true
chrono.workspace = true
sqlx.workspace = true
bincode.workspace = true
pprof = { version = "0.15.0", features = ["flamegraph", "prost-codec"] }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
