[package]
name = "jobs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
rand = "0.9.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"

[[bin]]
name = "generate-serial-ids-for-deletion"
path = "bin/generate_serial_ids_for_deletion.rs"
